# traffic-imc

./: .gitignore  LICENSE  README.md  traffic-imc.code-workspace
traffic-imc-baseline/: .gitignore  README.md  pyproject.toml
traffic-imc-baseline/configs/: agcrn.yaml  dcrnn.yaml  lstm.yaml  mlcaformer.yaml  stgcn.yaml
traffic-imc-baseline/src/traffic_imc_baseline/: cli.py  utils.py
traffic-imc-baseline/src/traffic_imc_baseline/models/agcrn/: __init__.py  agcrn.py  datamodule.py  dataset.py  layers.py  module.py
traffic-imc-baseline/src/traffic_imc_baseline/models/dcrnn/: __init__.py  datamodule.py  dataset.py  dcrnn_cell.py  dcrnn_model.py  module.py  utils.py
traffic-imc-baseline/src/traffic_imc_baseline/models/lstm/: datamodule.py  dataset.py  model.py  module.py
traffic-imc-baseline/src/traffic_imc_baseline/training/: agcrn_training.py  common.py  dcrnn_training.py  lstm_training.py  mlcaformer_training.py  registry.py  runner.py  stgcn_training.py
traffic-imc-dataset/: README.md  pyproject.toml
traffic-imc-dataset/configs/: config.yaml  config_base.yaml  config_bgcp.yaml  config_brits.yaml  config_grin.yaml  config_knn.yaml  config_mice.yaml  config_trmf.yaml
traffic-imc-dataset/src/traffic_imc_dataset/: __main__.py  pems_pipeline.py  pipeline.py  utils.py
traffic-imc-dataset/src/traffic_imc_dataset/components/: __init__.py  adj_mx.py  distance_imc.py  graph_sensor_locations.py  metadata.py  metr_ids.py
traffic-imc-dataset/src/traffic_imc_dataset/imcrts/: __init__.py  collector.py
traffic-imc-dataset/src/traffic_imc_dataset/nodelink/: __init__.py  converter.py  downloader.py
(+24 files in other folders)
